Parser/.antlr/KumaParser.java
// Generated from /home/nihilisticpandemonium/dev/Draco/Kuma/Parser/KumaParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KumaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NEWLINE=1, SEMICOLON=2, IF=3, WHILE=4, UNLESS=5, UNTIL=6, SWITCHOP=7, 
		ASSIGN=8, BREAK=9, RETRY=10, CONTINUE=11, THROW=12, LBRACE=13, RBRACE=14, 
		SWITCH=15, CASE=16, COLON=17, DEFAULT=18, LOOP=19, FOR=20, LPAREN=21, 
		IDENTIFIER=22, IN=23, RPAREN=24, DO=25, ELSE=26, RETURN=27, SET=28, CONST=29, 
		ADDASSIGN=30, SUBASSIGN=31, MULASSIGN=32, DIVASSIGN=33, MODASSIGN=34, 
		SHLASSIGN=35, SHRASSIGN=36, ANDASSIGN=37, ORASSIGN=38, XORASSIGN=39, EXPASSIGN=40, 
		CONDASSIGNO=41, CONDASSIGNA=42, INCREMENT=43, DECREMENT=44, OP=45, BACKWARDPIPE=46, 
		FORWARDPIPE=47, LOGICALOR=48, LOGICALXOR=49, LOGICALAND=50, COMPARE=51, 
		REGEXMATCH=52, REGEXNOMATCH=53, EQUAL=54, NOTEQUAL=55, LESSTHANEQUAL=56, 
		LESSTHAN=57, GREATERTHANEQUAL=58, GREATERTHAN=59, BITWISEXOR=60, BITWISEOR=61, 
		BITWISEAND=62, SHIFTLEFT=63, SHIFTRIGHT=64, PLUS=65, MINUS=66, MULTIPLY=67, 
		DIVIDE=68, MODULO=69, NOT=70, BITWISEINVERSE=71, TYPEOF=72, YIELD=73, 
		UNDEF=74, STRING=75, REMOVE=76, EXPONENT=77, LBRACKET=78, RBRACKET=79, 
		HASH=80, COMMA=81, BRACKETS=82, NUMBER=83, INTEGER=84, NIL=85, TRUE=86, 
		FALSE=87, DOT=88, CLASS=89, SELF=90, SUPER=91, CONTEXT=92, IRANGE=93, 
		ERANGE=94, WHENCOMP=95, UPLUS=96, UMINUS=97, BRACKETSASSIGN=98, DCOLON=99, 
		DEF=100, END=101, ALIAS=102, INCLUDE=103, MODULE=104, BEGIN=105, ENSURE=106, 
		RESCUE=107, SYNC=108, REGEX=109, COMMENT=110;
	public static final int
		RULE_program = 0, RULE_block_contents = 1, RULE_term = 2, RULE_term_top_level_statement = 3, 
		RULE_top_level_statement = 4, RULE_conditional_statement = 5, RULE_statement = 6, 
		RULE_block = 7, RULE_switch_construct = 8, RULE_case_block = 9, RULE_default_block = 10, 
		RULE_loop_construct = 11, RULE_for_construct = 12, RULE_for_in_construct = 13, 
		RULE_until_construct = 14, RULE_do_until_construct = 15, RULE_while_construct = 16, 
		RULE_do_while_construct = 17, RULE_unless_construct = 18, RULE_if_else_construct = 19, 
		RULE_else_part = 20, RULE_return_expression = 21, RULE_expression = 22, 
		RULE_prefix_increment = 23, RULE_postfix_increment = 24, RULE_assignment = 25, 
		RULE_prefix_op = 26, RULE_postfix_op = 27, RULE_arg = 28, RULE_op_expression = 29, 
		RULE_pipe_op = 30, RULE_pipe_expression = 31, RULE_logical_or_expression = 32, 
		RULE_logical_xor_expression = 33, RULE_logical_and_expression = 34, RULE_equality_op_eq_neq = 35, 
		RULE_equality_op = 36, RULE_equality_expression = 37, RULE_comparison_op = 38, 
		RULE_comparison_expression = 39, RULE_bitwise_or_op = 40, RULE_bitwise_or_expression = 41, 
		RULE_bitwise_and_expression = 42, RULE_shift_op = 43, RULE_shift_expression = 44, 
		RULE_additive_op = 45, RULE_additive_expression = 46, RULE_multiplicative_op = 47, 
		RULE_multiplicative_expression = 48, RULE_unary_expression = 49, RULE_power_expression = 50, 
		RULE_atom = 51, RULE_primary_right_side_parens = 52, RULE_primary_right_side_access = 53, 
		RULE_primary_right_side_yield_block = 54, RULE_primary_right_side_parens_access = 55, 
		RULE_primary_function_call = 56, RULE_primary_left_side = 57, RULE_primary = 58, 
		RULE_hash = 59, RULE_single_hash_key = 60, RULE_hash_key = 61, RULE_array = 62, 
		RULE_literal = 63, RULE_symbol = 64, RULE_lvalue = 65, RULE_lvalue_instance_ref_opt = 66, 
		RULE_lvalue_instance_ref = 67, RULE_lvalue_method_change = 68, RULE_lvalue_access = 69, 
		RULE_variable = 70, RULE_call_args = 71, RULE_call_arg_single_hash = 72, 
		RULE_call_arg = 73, RULE_first_arg = 74, RULE_first_var_arg = 75, RULE_first_block_arg = 76, 
		RULE_end_var_arg = 77, RULE_end_block_arg = 78, RULE_next_arg = 79, RULE_definition_argument_list_no_paren = 80, 
		RULE_definition_argument_list = 81, RULE_function_name = 82, RULE_function_definition = 83, 
		RULE_anonymous_function = 84, RULE_yield_block = 85, RULE_do_yield_block = 86, 
		RULE_parallel_assign_left = 87, RULE_parallel_assign_left_item = 88, RULE_parallel_assign_right = 89, 
		RULE_parallel_assign_right_item = 90, RULE_alias = 91, RULE_alias_part = 92, 
		RULE_include = 93, RULE_class_declaration = 94, RULE_anonymous_class_declaration = 95, 
		RULE_module_declaration = 96, RULE_begin_construct = 97, RULE_rescue_block = 98, 
		RULE_rescue_else_block = 99, RULE_rescue_ensure_block = 100, RULE_identifiers = 101, 
		RULE_sync_construct = 102;
	public static final String[] ruleNames = {
		"program", "block_contents", "term", "term_top_level_statement", "top_level_statement", 
		"conditional_statement", "statement", "block", "switch_construct", "case_block", 
		"default_block", "loop_construct", "for_construct", "for_in_construct", 
		"until_construct", "do_until_construct", "while_construct", "do_while_construct", 
		"unless_construct", "if_else_construct", "else_part", "return_expression", 
		"expression", "prefix_increment", "postfix_increment", "assignment", "prefix_op", 
		"postfix_op", "arg", "op_expression", "pipe_op", "pipe_expression", "logical_or_expression", 
		"logical_xor_expression", "logical_and_expression", "equality_op_eq_neq", 
		"equality_op", "equality_expression", "comparison_op", "comparison_expression", 
		"bitwise_or_op", "bitwise_or_expression", "bitwise_and_expression", "shift_op", 
		"shift_expression", "additive_op", "additive_expression", "multiplicative_op", 
		"multiplicative_expression", "unary_expression", "power_expression", "atom", 
		"primary_right_side_parens", "primary_right_side_access", "primary_right_side_yield_block", 
		"primary_right_side_parens_access", "primary_function_call", "primary_left_side", 
		"primary", "hash", "single_hash_key", "hash_key", "array", "literal", 
		"symbol", "lvalue", "lvalue_instance_ref_opt", "lvalue_instance_ref", 
		"lvalue_method_change", "lvalue_access", "variable", "call_args", "call_arg_single_hash", 
		"call_arg", "first_arg", "first_var_arg", "first_block_arg", "end_var_arg", 
		"end_block_arg", "next_arg", "definition_argument_list_no_paren", "definition_argument_list", 
		"function_name", "function_definition", "anonymous_function", "yield_block", 
		"do_yield_block", "parallel_assign_left", "parallel_assign_left_item", 
		"parallel_assign_right", "parallel_assign_right_item", "alias", "alias_part", 
		"include", "class_declaration", "anonymous_class_declaration", "module_declaration", 
		"begin_construct", "rescue_block", "rescue_else_block", "rescue_ensure_block", 
		"identifiers", "sync_construct"
	};

	private static final String[] _LITERAL_NAMES = {
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NEWLINE", "SEMICOLON", "IF", "WHILE", "UNLESS", "UNTIL", "SWITCHOP", 
		"ASSIGN", "BREAK", "RETRY", "CONTINUE", "THROW", "LBRACE", "RBRACE", "SWITCH", 
		"CASE", "COLON", "DEFAULT", "LOOP", "FOR", "LPAREN", "IDENTIFIER", "IN", 
		"RPAREN", "DO", "ELSE", "RETURN", "SET", "CONST", "ADDASSIGN", "SUBASSIGN", 
		"MULASSIGN", "DIVASSIGN", "MODASSIGN", "SHLASSIGN", "SHRASSIGN", "ANDASSIGN", 
		"ORASSIGN", "XORASSIGN", "EXPASSIGN", "CONDASSIGNO", "CONDASSIGNA", "INCREMENT", 
		"DECREMENT", "OP", "BACKWARDPIPE", "FORWARDPIPE", "LOGICALOR", "LOGICALXOR", 
		"LOGICALAND", "COMPARE", "REGEXMATCH", "REGEXNOMATCH", "EQUAL", "NOTEQUAL", 
		"LESSTHANEQUAL", "LESSTHAN", "GREATERTHANEQUAL", "GREATERTHAN", "BITWISEXOR", 
		"BITWISEOR", "BITWISEAND", "SHIFTLEFT", "SHIFTRIGHT", "PLUS", "MINUS", 
		"MULTIPLY", "DIVIDE", "MODULO", "NOT", "BITWISEINVERSE", "TYPEOF", "YIELD", 
		"UNDEF", "STRING", "REMOVE", "EXPONENT", "LBRACKET", "RBRACKET", "HASH", 
		"COMMA", "BRACKETS", "NUMBER", "INTEGER", "NIL", "TRUE", "FALSE", "DOT", 
		"CLASS", "SELF", "SUPER", "CONTEXT", "IRANGE", "ERANGE", "WHENCOMP", "UPLUS", 
		"UMINUS", "BRACKETSASSIGN", "DCOLON", "DEF", "END", "ALIAS", "INCLUDE", 
		"MODULE", "BEGIN", "ENSURE", "RESCUE", "SYNC", "REGEX", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KumaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KumaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Block_contentsContext block_contents() {
			return getRuleContext(Block_contentsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(KumaParser.EOF, 0); }
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public Top_level_statementContext top_level_statement() {
			return getRuleContext(Top_level_statementContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			setState(218);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(206);
				block_contents();
				setState(210);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE || _la==SEMICOLON) {
					{
					{
					setState(207);
					term();
					}
					}
					setState(212);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(213);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(215);
				top_level_statement();
				setState(216);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Block_contentsContext extends ParserRuleContext {
		public List<Term_top_level_statementContext> term_top_level_statement() {
			return getRuleContexts(Term_top_level_statementContext.class);
		}
		public Term_top_level_statementContext term_top_level_statement(int i) {
			return getRuleContext(Term_top_level_statementContext.class,i);
		}
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public Block_contentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block_contents; }
	}

	public final Block_contentsContext block_contents() throws RecognitionException {
		Block_contentsContext _localctx = new Block_contentsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block_contents);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(224);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(222);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case IF:
					case WHILE:
					case UNLESS:
					case UNTIL:
					case BREAK:
					case RETRY:
					case CONTINUE:
					case THROW:
					case LBRACE:
					case SWITCH:
					case COLON:
					case LOOP:
					case FOR:
					case LPAREN:
					case IDENTIFIER:
					case DO:
					case RETURN:
					case SET:
					case CONST:
					case INCREMENT:
					case DECREMENT:
					case OP:
					case BITWISEXOR:
					case PLUS:
					case MINUS:
					case MULTIPLY:
					case NOT:
					case BITWISEINVERSE:
					case TYPEOF:
					case YIELD:
					case UNDEF:
					case STRING:
					case REMOVE:
					case LBRACKET:
					case BRACKETS:
					case NUMBER:
					case INTEGER:
					case NIL:
					case TRUE:
					case FALSE:
					case CLASS:
					case SELF:
					case SUPER:
					case CONTEXT:
					case DEF:
					case ALIAS:
					case INCLUDE:
					case MODULE:
					case BEGIN:
					case SYNC:
					case REGEX:
						{
						setState(220);
						term_top_level_statement();
						}
						break;
					case NEWLINE:
					case SEMICOLON:
						{
						setState(221);
						term();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(226);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(KumaParser.NEWLINE, 0); }
		public TerminalNode SEMICOLON() { return getToken(KumaParser.SEMICOLON, 0); }
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_term);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(227);
			_la = _input.LA(1);
			if ( !(_la==NEWLINE || _la==SEMICOLON) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Term_top_level_statementContext extends ParserRuleContext {
		public Top_level_statementContext top_level_statement() {
			return getRuleContext(Top_level_statementContext.class,0);
		}
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public Term_top_level_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term_top_level_statement; }
	}

	public final Term_top_level_statementContext term_top_level_statement() throws RecognitionException {
		Term_top_level_statementContext _localctx = new Term_top_level_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_term_top_level_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(229);
			top_level_statement();
			setState(230);
			term();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Top_level_statementContext extends ParserRuleContext {
		public Conditional_statementContext conditional_statement() {
			return getRuleContext(Conditional_statementContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public Top_level_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_top_level_statement; }
	}

	public final Top_level_statementContext top_level_statement() throws RecognitionException {
		Top_level_statementContext _localctx = new Top_level_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_top_level_statement);
		try {
			setState(234);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(232);
				conditional_statement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(233);
				statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Conditional_statementContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode IF() { return getToken(KumaParser.IF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(KumaParser.WHILE, 0); }
		public TerminalNode UNLESS() { return getToken(KumaParser.UNLESS, 0); }
		public TerminalNode UNTIL() { return getToken(KumaParser.UNTIL, 0); }
		public TerminalNode SWITCHOP() { return getToken(KumaParser.SWITCHOP, 0); }
		public HashContext hash() {
			return getRuleContext(HashContext.class,0);
		}
		public Conditional_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional_statement; }
	}

	public final Conditional_statementContext conditional_statement() throws RecognitionException {
		Conditional_statementContext _localctx = new Conditional_statementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_conditional_statement);
		try {
			setState(256);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(236);
				statement();
				setState(237);
				match(IF);
				setState(238);
				expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(240);
				statement();
				setState(241);
				match(WHILE);
				setState(242);
				expression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(244);
				statement();
				setState(245);
				match(UNLESS);
				setState(246);
				expression();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(248);
				statement();
				setState(249);
				match(UNTIL);
				setState(250);
				expression();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(252);
				statement();
				setState(253);
				match(SWITCHOP);
				setState(254);
				hash();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
